@@ -1,3 +1,4 @@
+2024-08-23: [FEATURE] Add `GradientDecoration` for widgets
 2024-08-13: [RELEASE] v0.28.1 release - compatible with qtile 0.28.1
 2024-08-11: [RELEASE] v0.28.0 release - compatible with qtile 0.28.0
 2024-07-22: [FEATURE] Add ability to toggle visibility of groups in `GroupBox2` widget
